--- a/src/main/frontend/src/styles/AbsentSchedule.css
+++ b/src/main/frontend/src/styles/AbsentSchedule.css
@@ -18,3 +18,14 @@
   margin: 0;
   font-size: 1em;
 }
+
+.absent-select {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.absent-select-title {
+  width: 35%;
+  font-size: 14px;
+}
