--- a/src/main/frontend/src/styles/Button.css
+++ b/src/main/frontend/src/styles/Button.css
@@ -2,6 +2,8 @@
 .accept-btn {
   background-color: #a8d08c !important;
   color: white !important;
+  border: none;
+  border-radius: 5px;
   font-weight: 600 !important;
   font-size: 12px !important;
   border: none;
@@ -10,6 +12,8 @@
 .cancel-btn {
   background-color: #f4b081 !important;
   color: white !important;
+  border: none;
+  border-radius: 5px;
   font-weight: 600 !important;
   font-size: 12px !important;
   border: none;
@@ -18,6 +22,8 @@
 .edit-btn {
   background-color: #81abf4 !important;
   color: white !important;
+  border: none;
+  border-radius: 5px;
   font-weight: 600 !important;
   font-size: 12px !important;
   border: none;
@@ -26,6 +32,8 @@
 .delete-btn {
   background-color: #c881f4 !important;
   color: white !important;
+  border: none;
+  border-radius: 5px;
   font-weight: 600 !important;
   font-size: 12px !important;
   border: none;
@@ -38,6 +46,16 @@
   border-radius: 5px;
   background-color: #b2bde6;
   color: white !important;
+  cursor: pointer;
+}
+
+.search-btn {
+  margin: 0 5px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f4a0d2;
+  color: white;
   cursor: pointer;
 }
 
