--- a/src/main/frontend/src/styles/Button.css
+++ b/src/main/frontend/src/styles/Button.css
@@ -30,7 +30,7 @@
 }
 
 .delete-btn {
-  background-color: #c881f4 !important;
+  background-color: #f4818f !important;
   color: white !important;
   border: none;
   border-radius: 5px;
@@ -54,7 +54,7 @@
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
-  background-color: #f4a0d2;
+  background-color: #d8aef3;
   color: white;
   cursor: pointer;
 }
