[feat] Add post edit

--- a/src/main/frontend/src/styles/Button.css
+++ b/src/main/frontend/src/styles/Button.css
@@ -20,7 +20,7 @@
 }
 
 .edit-btn {
-  background-color: #81abf4 !important;
+  background-color: #8cb1f0 !important;
   color: white !important;
   border: none;
   border-radius: 5px;
@@ -30,7 +30,7 @@
 }
 
 .delete-btn {
-  background-color: #f4818f !important;
+  background-color: #f1949f !important;
   color: white !important;
   border: none;
   border-radius: 5px;
