--- a/src/main/frontend/src/styles/NoticeBoard.css
+++ b/src/main/frontend/src/styles/NoticeBoard.css
@@ -123,3 +123,21 @@
   height: 100px;
   margin-top: 10px;
 }
+
+.post-edit-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.post-edit {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.edit-actions {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
