--- a/src/main/frontend/src/styles/Stat.css
+++ b/src/main/frontend/src/styles/Stat.css
@@ -10,11 +10,6 @@
   margin-bottom: 10px;
 }
 
-.calendar-icon {
-  margin-right: 5px;
-  color: #3498db;
-}
-
 .react-datepicker-wrapper,
 .react-datepicker-popper,
 .react-datepicker {
@@ -51,12 +46,23 @@
 .radio-button {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-right: 20px;
 }
 
 .attendance-king {
   display: flex;
-
+  margin-top: 20px;
   justify-content: center;
   font-size: 20px;
+}
+.chart-container {
+  height: 100%;
+  max-height: 400px;
+}
+
+.select-date {
+  display: flex;
+  justify-content: center;
 }
