--- a/src/main/frontend/src/styles/Dialog.css
+++ b/src/main/frontend/src/styles/Dialog.css
@@ -5,6 +5,10 @@
   min-width: 250px !important;
 }
 
+.fullwidth-content {
+  margin: 0 10% 0 10% !important;
+}
+
 .dialog-input {
   margin-left: auto !important;
 }
@@ -29,4 +33,8 @@
 .input-key {
   font-size: 14px !important;
   margin-bottom: 20px !important;
+}
+
+.checkbox-key {
+  font-size: 14px !important;
 }
